<resources>
    <string name="app_name">Emergency Guardian</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_notifications">Notifications</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_personal_details">Personal Details</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="label_add_emergency_contacts">Add Emergency Contacts</string>
    <string name="label_edit_emergency_contacts">Edit Emergency Contacts</string>
    <string name="label_emergency_contacts">Emergency Contacts</string>
    <string name="label_emergency_button">Emergency Button</string>
    <string name="label_emergency_call">Emergency Call</string>
    <string name="label_emergency_text">Emergency Text</string>
    <string name="label_take_video">Take Video</string>
    <string name="label_self_defence">Self Defence</string>
    <string name="label_my_location">My Location</string>
    <string name="label_near_me">Near Me</string>
    <string name="label_siren_play">Siren Play</string>
    <string name="label_send_video">Send Video</string>
    <string name="label_my_profile">Personal Details</string>
    <string name="label_settings">Settings</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_logOut">Log Out</string>
    <string name="label_about_us">About Us</string>
    <string name="label_edit_profile">Edit Profile</string>





</resources>