<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_emergency_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="193dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/emergency_button" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_emergency_button"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_emergency_call"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/emergency_call" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_emergency_call"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_emergency_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="193dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/emergency_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_emergency_text"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_siren_play"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/siren_play" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_siren_play"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_near_me"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="193dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/near_me" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_near_me"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_my_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/my_location" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_my_location"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_take_video"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="193dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/take_video" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_take_video"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_self_defence"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="50"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="164dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/self_defence" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/label_self_defence"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
</ScrollView>

